--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,3 +2,24 @@
         <h1>
             Codeial / <%= title %>
         </h1>
+        <section id="feed-posts">
+            <h4>Posts</h4>
+            <form action="/posts/create" id="new-post-form" method="Post">
+                <textarea name="content" cols="30" rows="3"></textarea>
+                <input type="submit" value="Post">
+            </form>
+            <div>
+                <ul>
+                    <% if(locals.user){%>
+                <% for(post of posts){%>
+                    <li>
+                        <p>
+                        <%=post.content%><br>
+                        <%=post.user.name%>
+                        </p>
+                    </li>
+                <%}%>
+                <%}%>
+                </ul>
+            </div>
+        </section>
