added delete button to comments

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -36,6 +36,9 @@
                                         <%=comment.content%><br>
                                         <%=comment.user.name%>
                                         </p>
+                                        <% if(locals.user && (locals.user.id==comment.user.id || locals.user.id==post.user.id)){%>
+                                            <a href="/comments/destroy/<%=comment.id%>">||</a>
+                                        <%}%>
                                     </li>
                                     <%}%>
                                 </ul>
