--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,43 +10,14 @@
             </form>
             <div id="post-list-container">
                 <ul>
-                    <% if(locals.user){%>
-                <% for(post of posts){%>
-                    <li>
-                        <p>
-                        <%=post.content%><br>
-                        <%=post.user.name%>
-                        </p>
-                        <% if(locals.user && locals.user.id==post.user.id){%>
-                        <a href="/posts/destroy/<%=post.id%>">||</a>
-                        <%}%>
-                        <div class="posts-container">
-                            <% if(locals.user){%>
-                                <form action="/comments/create" method="POST">
-                                    <input type="text" name="content" placeholder="type comment" required>
-                                    <input type="hidden" name="post" value="<%=post._id%>">
-                                    <input type="submit" value="Add Comment"> 
-                                </form>
-                            <%}%>
-                            <div id="post-list-container">
-                                <ul id="post-comments-<%=post._id%>">
-                                <% for(comment of post.comments){%>
-                                    <li>
-                                        <p>
-                                        <%=comment.content%><br>
-                                        <%=comment.user.name%>
-                                        </p>
-                                        <% if(locals.user && (locals.user.id==comment.user.id || locals.user.id==post.user.id)){%>
-                                            <a href="/comments/destroy/<%=comment.id%>">||</a>
-                                        <%}%>
-                                    </li>
-                                    <%}%>
-                                </ul>
-                            </div>
-                        </div>
-                    </li>
-                <%}%>
-                <%}%>
+                   <%- include('_post') -%>
                 </ul>
             </div>
+        </section>
+        <section id="user-friends">
+            <h4>Friends</h4>
+            <% for(user of all_users) {%>
+                <a href="/users/profile/<%=user.id%>"><%= user.name%></a>
+            <%}%>
+
         </section>
