--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -2,5 +2,18 @@
         <h1>
             Codeial / Profile Page
         </h1>
-        <%=user.name%>
-        <%=user.email%>
+        
+        <% if(user.id==profile_user.id){%>
+            <form action="/users/update/<%=profile_user.id%>" method="POST">
+                <input type="text" name="name" placeholder="Your name" value="<%profile_user.name%>" required>
+                <input type="email" name="email" placeholder="Your email" value="<%profile_user.email%>" required>
+                <input type="submit" value="Update">
+            </form>
+            
+        <%}else{%>
+
+            <%=profile_user.name%>
+            <%=profile_user.email%>
+
+        <%}%>
+        
