added styles with scss files

--- a/views/_comment.ejs
+++ b/views/_comment.ejs
@@ -1,11 +1,15 @@
-<% for(comment of post.comments){%>
-    <li>
-        <p>
-        <%=comment.content%><br>
-        <%=comment.user.name%>
-        </p>
-        <% if(locals.user && (locals.user.id==comment.user.id || locals.user.id==post.user.id)){%>
-            <a href="/comments/destroy/<%=comment.id%>">||</a>
-        <%}%>
-    </li>
-    <%}%>
+<li>
+    <p>
+        <% if (locals.user && locals.user.id == comment.user.id){ %>
+        <small>
+            <a href="/comments/destroy/<%= comment.id %>">X</a>
+        </small>
+        <% } %>
+        <%= comment.content %>
+        <br>
+        <small>
+            <%= comment.user.name %>
+        </small>
+    </p>    
+
+</li>
