--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,23 +1,34 @@
-<header>
+<!-- <header>
     Page Header
-</header>
-<ul>
-    <% if(locals.user){%>
-        <li>
-            <a href="/users/profile/<%=user.id%>">
-                <%=user.name %>
-            </a>
-        </li>
-        <li>
-            <a href="/users/sign-out">Sign-out</a>
-        </li>
-        <%}else{%>
-            <li>
-                <a href="/users/sign-in">Sign-in</a>
-            </li>
-            <li>
-                <a href="/users/sign-out">Sign-out</a>
-            </li>
-            
-            <%} %>
-</ul>
+</header> -->
+<header id="layout-header">
+    <nav>
+        <div class="mini-logo">
+            <p>
+                <a href='/'>
+                    codeial
+                </a>
+            </p>
+        </div>
+    
+        <div class="auth-links">
+            <ul>
+                <% if (locals.user){ %>
+                <li>
+                    <a href="/users/profile"><%= user.name %></a>
+                </li>
+                <li>
+                    <a href="/users/sign-out">Sign Out</a>
+                </li>
+                <% }else{ %>
+                <li>
+                    <a href="/users/sign-in">Sign In</a>
+                </li>
+                <li>
+                    <a href="/users/sign-up">Sign Up</a>
+                </li>
+        
+                <% } %>
+            </ul>
+        </div>
+    </nav>
