--- a/views/_post.ejs
+++ b/views/_post.ejs
@@ -1,27 +1,36 @@
-<% if(locals.user){%>
-    <% for(post of posts){%>
-        <li>
-            <p>
-            <%=post.content%><br>
-            <%=post.user.name%>
-            </p>
-            <% if(locals.user && locals.user.id==post.user.id){%>
-            <a href="/posts/destroy/<%=post.id%>">||</a>
-            <%}%>
-            <div class="posts-container">
-                <% if(locals.user){%>
-                    <form action="/comments/create" method="POST">
-                        <input type="text" name="content" placeholder="type comment" required>
-                        <input type="hidden" name="post" value="<%=post._id%>">
-                        <input type="submit" value="Add Comment"> 
-                    </form>
-                <%}%>
-                <div id="post-list-container">
-                    <ul id="post-comments-<%=post._id%>">
-                        <%-include('_comment')_%>
-                    </ul>
-                </div>
-            </div>
-        </li>
-    <%}%>
-    <%}%>
+<li id="post-<%= post._id %>">
+    <p>
+        <% if (locals.user && locals.user.id == post.user.id){ %>
+        <small>
+            <a class="delete-post-button"  href="/posts/destroy/<%= post.id %>">X</a>
+        </small>
+        <% } %>
+        <%= post.content %>
+        <br>
+        <small>
+            <%= post.user.name %>
+        </small>
+    </p>
+    <div class="post-comments">
+        <% if (locals.user){ %>
+            <form action="/comments/create" method="POST">
+                <input type="text" name="content" placeholder="Type Here to add comment..." required>
+                <input type="hidden" name="post" value="<%= post._id %>" >
+                <input type="submit" value="Add Comment">
+            </form>
+
+        <% } %>
+
+        <div class="post-comments-list">
+            <ul id="post-comments-<%= post._id %>">
+                <% for (comment of post.comments){%>
+
+                    <%- include('_comment') -%>
+                    
+                
+                <%} %>
+            </ul>
+        </div>
+    </div>
+    
+</li>
