--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,23 +1,35 @@
+<link rel="stylesheet" href="/css/home.css">
 
-        <h1>
-            Codeial / <%= title %>
-        </h1>
-        <section id="feed-posts">
+<div id="home-container">
+    <section id="feed-posts">
             <h4>Posts</h4>
-            <form action="/posts/create" id="new-post-form" method="Post">
-                <textarea name="content" cols="30" rows="3" required></textarea>
+            <% if(locals.user){ %>
+            <form action="/posts/create" id="new-post-form" method="POST">
+                <textarea name="content" cols="30" rows="3" placeholder="Type Here..." required></textarea>
                 <input type="submit" value="Post">
             </form>
-            <div id="post-list-container">
+            <% } %>
+        
+            <div id="posts-list-container">
                 <ul>
-                   <%- include('_post') -%>
+                    <% for(post of posts){ %>
+                        
+                    <%- include('_post') -%>
+                        
+                    <%} %>
                 </ul>
             </div>
         </section>
+        
+        
         <section id="user-friends">
             <h4>Friends</h4>
-            <% for(user of all_users) {%>
-                <a href="/users/profile/<%=user.id%>"><%= user.name%></a>
-            <%}%>
-
+            <% for(u of all_users){%>
+                <p>
+                    <a href="/users/profile/<%= u.id %>"><%= u.name %></a>
+                </p>
+            <% } %>
         </section>
+</div>
+<script src="/js/home_posts.js"></script>
+
