--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,7 +1,5 @@
 <link rel="stylesheet" href="/css/user_profile.css">
-<h1>
-    Codeial / Profile Page
-</h1>
+<img src="<%=user.avatar%>" alt="<%=user.name%>" height="100px" width="100px">
 
 
 
