--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,11 +12,11 @@
         
             <div id="posts-list-container">
                 <ul>
-                    <!-- <% for(post of posts){ %> -->
+                    <% for(post of posts){ %>
                         
                     <%- include('_post') -%>
                         
-                    <!-- <%} %> -->
+                    <%} %>
                 </ul>
             </div>
         </section>
@@ -31,5 +31,16 @@
             <% } %>
         </section>
 </div>
+
+<!-- importing this script for creating the comments -->
+<script src="/js/home_post_comments.js" ></script>
 <script src="/js/home_posts.js"></script>
 
+<!-- CHANGE :: import the script file for toggle likes, also run it over for the already present posts and comments on the page -->
+<script src="js/toggle_likes.js"></script>
+<script>
+    $('.toggle-like-button').each(function(){
+        let self = this;
+        let toggleLike = new ToggleLike(self);
+    });
+</script>
